--- a/editor/templates/event.html.j2
+++ b/editor/templates/event.html.j2
@@ -1,14 +1,32 @@
 {% extends "base.html.j2" %}
 {% block content %}
+    <script src="https://hlsjs.video-dev.org/dist/hls.js"></script>
     <h2>Recordings</h2>
     {% for host, host_recordings in recordings.items() %}
         {% for recording in host_recordings %}
             <h3>{{ host }} - {{ recording }}</h3>
-            <video src="/video/{{ slug }}/{{ host }}/{{ recording }}"
-                   height="180"
-                   width="320"
-                   controls>
+            <video width="600" id="{{ recording }}" controls>
             </video>
+            <script>
+                var video = document.getElementById("{{ recording }}");
+                if (Hls.isSupported()) {
+                    var hls = new Hls({
+                    debug: true,
+                    });
+                    hls.loadSource("/video/{{ slug }}/{{ host }}/{{ recording }}/index.m3u8");
+                    hls.attachMedia(video);
+                    hls.on(Hls.Events.MEDIA_ATTACHED, function () {
+                    video.muted = true;
+                    video.play();
+                    });
+                }
+                else if (video.canPlayType("application/vnd.apple.mpegurl")) {
+                    video.src = "/video/{{ slug }}/{{ host }}/{{ recording }}/index.m3u8";
+                    video.addEventListener("canplay", function () {
+                    video.play();
+                    });
+                }
+            </script>
         {% endfor %}
     {% endfor %}
     <h2>Metadata</h2>
